...
          toolbarHeight: 0,
          titleSpacing: 0,
          bottom: TabBar(
            controller: _tabController,
            onTap: _onTabTapped,
            tabs: const [
              Tab(text: 'Υπάλληλοι'),
              Tab(text: 'Τμήματα'),
              Tab(text: 'Εξοπλισμός'),
              Tab(text: 'Διάφορα'),
            ],
          ),
        ),
...
